<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConsolesActivity">

    <TextView
        android:id="@+id/consoles_text"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="123dp"
        android:gravity="center"
        android:text="@string/console_head"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/check_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/pc"
        android:theme="@style/DarkCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consoles_text" />

    <CheckBox
        android:id="@+id/check_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="132dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:text="@string/ps4"
        android:theme="@style/DarkCheck"
        app:layout_constraintBottom_toTopOf="@+id/check_4"
        app:layout_constraintStart_toEndOf="@+id/check_1"
        app:layout_constraintTop_toBottomOf="@+id/consoles_text"
        app:layout_constraintVertical_bias="0.952" />

    <CheckBox
        android:id="@+id/check_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/xbox_one"
        android:theme="@style/DarkCheck"
        app:layout_constraintEnd_toEndOf="@+id/check_1"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/check_1"
        app:layout_constraintTop_toBottomOf="@+id/check_1" />

    <CheckBox
        android:id="@+id/check_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/nintendo_switch"
        android:theme="@style/DarkCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/check_3" />

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_btn" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="145dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="145dp"
        android:layout_marginStart="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/finish_btn"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>